[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "ledger-explorer"
version = "0.1.0"
description = ""
authors = ["S Aufrecht <s@aufrecht.org>"]

[tool.poetry.dependencies]
python = "^3.9"
Brotli = "^1.0.9"
click = "^8.1.3"
dash = "^2.5.1"
Flask = "^2.1.2"
numpy = "^1.23.0"
Jinja2 = "^3.1.2"
pandas = "^1.4.3"
plotly = "^5.9.0"
pyparsing = "^3.0.9"
pytz = "^2022.1"
treelib = "^1.6.1"

[tool.poetry.dev-dependencies]
pytest = "^3.4"
